RESOLVED FIXED294088
Fix the builds with recent SDK
https://bugs.webkit.org/show_bug.cgi?id=294088
Summary Fix the builds with recent SDK
Karl Rackler
Reported 2025-06-05 13:36:03 PDT
Attachments
EWS
Comment 1 2025-06-05 13:49:10 PDT
Committed 295887@main (8ffcd9804cde): <https://commits.webkit.org/295887@main> Reviewed commits have been landed. Closing PR #46381 and removing active labels.
EWS
Comment 2 2025-06-05 14:37:29 PDT
Committed 295892@main (40ba90d87fef): <https://commits.webkit.org/295892@main> Reviewed commits have been landed. Closing PR #46386 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.