Fix the builds with recent SDK https://bugs.webkit.org/show_bug.cgi?id=294088 rdar://152673191

Unreviewed Build Fix.

* Source/WebKit/NetworkProcess/cocoa/NetworkSessionCocoa.mm:
(WebKit::NetworkSessionCocoa::NetworkSessionCocoa):

Canonical link: https://commits.webkit.org/295887@main